fix: 🐛 fix using swagger schema and endpoints path
